--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html data-theme="cupcake" lang="en">
 <head>
   <meta charset="utf-8">
   <title>Flexitems</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="./output.css" rel="stylesheet">
 
 </head>
 <body>
